      tilo works again.
    - sparc: Setup miniiso target.  ths says that this is the Right Thing.
    - sparc: Remove cdrom target.
    - sparc: Add demo target.
    - tftpboot.sh: Accept sparc64 as a reasonable alias for sun4u.
    - sparc: Add boot screen and silo.conf
    - sparc: only define USERDEVFS for netboot installs
    - sparc: Require silo
  * Stephen R. Marenka
    - m68k: mac build fixes.
    - m68k: add build support for amiga.
    - m68k: demo build.
    - m68k: add initial subarch support for atari and vme's.
    - m68k: add m68k to floppy pkg-lists.
  * Joey Hess
    - add support for pkg-lists/*/local files (not in CVS), for building
      test images
    - di-utils is now part of base
    - fix pcmcia-config-reduce call
    - set the syslinux timeout to 0 on floppys, to match the CD
    - put syslinux boot screens back on boot floppy and hd-media
  * Sylvain Ferriol
    - Add plip-modules to the net_drivers floppy.
  * Thomas Poindessous
    - Add libiw27 to control for netcfg depends

 -- Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>  Tue, 10 Feb 2004 07:27:46 +0100

debian-installer (20040209) unstable; urgency=low

  * Steve Langasek
    - Use -di flavored kernels for alpha
    - build-depend on aboot for alpha (needed for making
      floppies/CDs bootable)
    - include srm-modules and socket-modules in the alpha initrd
    - tell d-i that alpha CDROMs don't use a floppy image, just an
      initrd and kernel
    - upgrade to 2.4.24 for alpha kernels
  * Thiemo Seufer
    - Remove dead apt-get code in the Makefile.
    - Redesigned build system. Major changes to the configuration
      handling for all architectures. Closes: #215508
    - Remove arhcdetect from m68k config, it is already in the generic
      config.
    - Fix broken alpha build, input-modules isn't created for -di
      kernel flavour.
    - Adjust daily-build script for the new build system.
    - Remove special handling for "default", it was broken anyway.