@@ -42,7 +42,7 @@ DEBIAN_VERSION = sarge
 # The date the installer is built.
 BUILD_DATE = $(shell date +%Y%m%d)
 
-# Filesystem type for the initrd, valid values are romfs and ext2.
+# Filesystem type for the initrd, the only currently valid values is ext2.
 # NOTE: Your kernel must support this filesystem, not just a module. 
 INITRD_FS = ext2
 
