@@ -26,6 +26,10 @@ debian-installer (20040210) UNRELEASED; urgency=low
     - sparc: Add boot screen and silo.conf
     - sparc: only define USERDEVFS for netboot installs
     - sparc: Require silo
+
+    We *can* eradicate ROMFS in your lifetime!
+
+    - Remove all references to romfs as a valid option.
   * Stephen R. Marenka
     - m68k: mac build fixes.
     - m68k: add build support for amiga.
